[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/UI/UI.gd" type="Script" id=1]
[ext_resource path="res://src/UI/ButtonBoxContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/SpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/TrashBoxContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/KarmaBoxContainer.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/KarmaList.gd" type="Script" id=6]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 508.0
margin_bottom = 36.0
size_flags_horizontal = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrashBoxContainer" parent="GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="ButtonBoxContainer" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 468.0
margin_right = 504.0

[node name="KarmaBoxContainer" parent="GridContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 24.0
margin_right = 464.0
margin_bottom = 32.0
size_flags_vertical = 0

[node name="SpeechBubble" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 0.728088
margin_top = 252.506
margin_right = 512.728
margin_bottom = 302.506
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KarmaList" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -75.5
margin_right = 112.0
margin_bottom = 75.5
scroll_active = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}
